fix: align progress bar with new tx button

--- a/src/components/tx-flow/common/TxLayout/styles.module.css
+++ b/src/components/tx-flow/common/TxLayout/styles.module.css
@@ -1,3 +1,7 @@
+.container {
+  margin-top: 42px;
+}
+
 .header {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
